--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ footer p {
 
 /* Estilos do Card de Detalhes */
 #detail-card {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
